objects/FLODocs__Temporal_Process__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Activation_Batch_ID__c</fullName>
        <label>Activation Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Component_Errors__c</fullName>
        <label>Component Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Components_Deployed__c</fullName>
        <label>Components Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Components_Total__c</fullName>
        <label>Components Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deploy_Batch_ID__c</fullName>
        <label>Deploy Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Error_Messages__c</fullName>
        <label>Deployment Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Log</label>
        <referenceTo>FLODocs__Deplyoment_Log__c</referenceTo>
        <relationshipLabel>Temporal Processes</relationshipLabel>
        <relationshipName>Temporal_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Status__c</fullName>
        <label>Deployment Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Percentage_Completed__c</fullName>
        <formula>CASE(TEXT(FLODocs__Stage__c),
						&quot;In Progress&quot;, 0,
						&quot;Deployment in Progress&quot;, 0.4,
						&quot;Activation in Progress&quot;,0.8,
						1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FLODocs__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validations Rejected</fullName>
                    <default>true</default>
                    <label>Validations Rejected</label>
                </value>
                <value>
                    <fullName>Package Build</fullName>
                </value>
                <value>
                    <fullName>Deployment Pending</fullName>
                </value>
                <value>
                    <fullName>Deployment in Progress</fullName>
                </value>
                <value>
                    <fullName>Unit Tests Pending</fullName>
                </value>
                <value>
                    <fullName>Unit Tests in Progress</fullName>
                </value>
                <value>
                    <fullName>Deployment Failed</fullName>
                </value>
                <value>
                    <fullName>Deployment Succeeded</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Activation in Progress</fullName>
                    <isActive>false</isActive>
                    <label>Activation in Progress</label>
                </value>
                <value>
                    <fullName>Batch in Progress</fullName>
                    <isActive>false</isActive>
                    <label>Batch in Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Error_Messages__c</fullName>
        <label>Test Error Messages</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Errors__c</fullName>
        <label>Test Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Tests_Completed__c</fullName>
        <label>Tests Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Tests_Total__c</fullName>
        <label>Tests Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Temporal Process</label>
    <listViews>
        <fullName>FLODocs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Temporal Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporal Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>